<resources>
    <string name="app_name">AlesraaProjectXML</string>
    <string name="text_1">يمكن أيضًا أن يكون الاستثمار في تصميم UX المستخدم في بداية عملية تطوير البرامج فعالاً من حيث التكلفة. من خلال تحديد ومعالجة مشكلات قابلية الاستخدام المحتملة في وقت مبكر ، يمكنك توفير الوقت والمال على المدى الطويل. علاوة على ذلك ، فإن الحصول على تجربة مستخدم فائقة مقارنة بمنافسيك يمكن أن يكون عاملاً رئيسياً يمكن أن يميز منتجك في السوق.</string>
    <string name="text_2">يمكنك تحسين رضا المستخدم ومشاركته من خلال تصميم منتج يلبي احتياجات وسلوكيات المستخدم. يمكن أن يؤدي هذا إلى زيادة التحويلات ، حيث من المرجح أن يكمل المستخدمون الإجراءات المطلوبة ، مثل إجراء عملية شراء أو ملء نموذج.</string>
    <string name="text_3">أخيرًا ، من المهم الإشارة إلى أن إمكانية الوصول هي جزء أساسي من تصميم UX ، مما يعني التصميم للمستخدمين ذوي الإعاقة. هذا لا يجعل منتجك أكثر شمولاً فحسب ، بل إنه يتوافق أيضًا مع المتطلبات القانونية في بعض البلدان.</string>
    <string name="text_4">يمكن أيضًا أن يكون الاستثمار في تصميم UX المستخدم في بداية عملية تطوير البرامج فعالاً من حيث التكلفة. من خلال تحديد ومعالجة مشكلات قابلية الاستخدام المحتملة في وقت مبكر ، يمكنك توفير الوقت والمال على المدى الطويل. علاوة على ذلك ، فإن الحصول على تجربة مستخدم فائقة مقارنة بمنافسيك يمكن أن يكون عاملاً رئيسياً يمكن أن يميز منتجك في السوق.يمكن أيضًا أن يكون الاستثمار في تصميم UX المستخدم في بداية عملية تطوير البرامج فعالاً من حيث التكلفة. من خلال تحديد ومعالجة مشكلات قابلية الاستخدام المحتملة في وقت مبكر ، يمكنك توفير الوقت والمال على المدى الطويل. علاوة على ذلك ، فإن الحصول على تجربة مستخدم فائقة مقارنة بمنافسيك يمكن أن يكون عاملاً رئيسياً يمكن أن يميز منتجك في السوق.يمكن أيضًا أن يكون الاستثمار في تصميم UX المستخدم في بداية عملية تطوير البرامج فعالاً من حيث التكلفة. من خلال تحديد ومعالجة مشكلات قابلية الاستخدام المحتملة في وقت مبكر ، يمكنك توفير الوقت والمال على المدى الطويل. علاوة على ذلك ، فإن الحصول على تجربة مستخدم فائقة مقارنة بمنافسيك يمكن أن يكون عاملاً رئيسياً يمكن أن يميز منتجك في السوق.يمكن أيضًا أن يكون الاستثمار في تصميم UX المستخدم في بداية عملية تطوير البرامج فعالاً من حيث التكلفة. من خلال تحديد ومعالجة مشكلات قابلية الاستخدام المحتملة في وقت مبكر ، يمكنك توفير الوقت والمال على المدى الطويل. علاوة على ذلك ، فإن الحصول على تجربة مستخدم فائقة مقارنة بمنافسيك يمكن أن يكون عاملاً رئيسياً يمكن أن يميز منتجك في السوق.يمكن أيضًا أن يكون الاستثمار في تصميم UX المستخدم في بداية عملية تطوير البرامج فعالاً من حيث التكلفة. من خلال تحديد ومعالجة مشكلات قابلية الاستخدام المحتملة في وقت مبكر ، يمكنك توفير الوقت والمال على المدى الطويل. علاوة على ذلك ، فإن الحصول على تجربة مستخدم فائقة مقارنة بمنافسيك يمكن أن يكون عاملاً رئيسياً يمكن أن يميز منتجك في السوق.</string>
    <string name="text_6">تقارير الواجبات للمواد المسجلة للفصل الدراسي الحالي</string>
    <string name="skip">تخطي</string>
    <string name="EasyLogin">سهولة تسجيل الدخول للتطبيق</string>
    <string name="tv_welcome1">تطبيق التعليم الالكتروني الخاص بجامعة الاسراء يحتوي على جميع الأقسام الموجودة في صفحة الويب سجل الدخول في التطبيق و تمتع بالاستمرار في استخدام التعليم الالكتروني</string>
    <string name="Access_to_Learning">الوصول للتعليم الالكتروني في أي وقت</string>
    <string name="tv_welcome2">تطبيق التعليم الالكتروني الخاص بجامعة الاسراء يحتوي على جميع الأقسام الموجودة في صفحة الويب سجل الدخول في التطبيق و تمتع بالاستمرار في استخدام التعليم الالكتروني</string>
    <string name="Smooth_navigation">سلاسة في التنقل بين صفحات التطبيق</string>
    <string name="tv_welcome3">يتميز التطبيق بواجهات سهلة الاستخدام و بالسلاسة في التنقل بين صفحات التطبيق</string>
    <string name="Notifications">تتوفر ميزة الاشعارات في التطبيق</string>
    <string name="tv_welcome4">الى جانب الميزات الموجودة في التطبيق فتتوفر أيضا ميزة وصول الاشعارات للمستخدم في حالة ارسال أي ملف او واجب من قبل المحاضر</string>
    <string name="welcomeP">أهـلاً وسـهلاً بـــك</string>
    <string name="coruses">المساقات المسجلة</string>
    <string name="text">يمكنكم مشاهدة الانشطة التي تم وضعها من قبل المحاضرين بالضغط على المواد الدراسية في القائمة</string>
    <string name="text1">محاضرين الفصل الدراسي الحالي</string>
    <string name="comments">إضافة تعليق</string>
    <string name="send">ارسال</string>
    <string name="test">تم التسليم، في تاريخ 28/11/2023، اخر تعديل 30/11/2023</string>
    <string name="_08_12_2022">الطلبة الأعزاء /يرجى منكم وضع أسم موضوع البحث وموعد شرح بحتكم حتى موعد أقصاه الخميس 08/12/2022م</string>
    <string name="_12_00_6_00_10">الطلبة الأعزاء مرفق لكم رابط الإختبار القصير اليوم من الساعة 12:00م حتى الساعة 6:00م لمدة 10 دقائق</string>
    <string name="text_7">قم باختيار المصدر الذي تود رفعه للطلبة المسجلين في المساق</string>
    <string name="text_8">الواجب الأول | يرجى رفع الشابتر الأول من مشروع التخرج</string>
    <string name="text_9">الشابتر الأول-تطبيق التعليم الالكتروني</string>
    <string name="text_10">تم الرفع بواسطة | هدية خليل مقاط</string>
    <string name="text_11">فكرة التطبيق الخاصة بي هي تحويل صفحة التعليم الالكتروني الخاصة بالجامعة الى تطبيق للهاتف</string>
    <string name="text12">نقاش | الطلبة الأعزاء قم بكتابة فكرة المشروع الخاص بك</string>
    <string name="text_12">في هذا القسم سيتم عرض جميع الرسائل الواردة من الطلاب</string>
    <string name="text_13">اعتذار عن تقديم الاختبار القصير</string>
</resources>